--- a/code/pages/index/index.wxml
+++ b/code/pages/index/index.wxml
@@ -1,5 +1,23 @@
-
-<!--index.wxml-->
+<!-- index.wxml -->
+<view wx:if="{{!canIUse&&showShouquan}}" style='height:100vh;width:100vw;opacity:.5;position:absolute;top:0'></view>
+<view wx:if="{{!canIUse&&showShouquan}}" style='color:#333333;position:absolute;top:340rpx;width:70vw;left:9vw;padding:6vw'>
+  <view style='font-size:42rpx'>微信授权</view>
+  <view style='font-size:30rpx;font-weight:bold;text-align:center;padding:20rpx;border-bottom:1px solid #e9e9e9'>
+    ....网络科技申请获取以下权限：
+  </view>
+  <view style='font-size:26rpx;text-align:center;margin:30rpx 30rpx 70rpx 30rpx'>
+    <text>获得你的公开信息（昵称、头像等）</text>
+  </view>
+  <view style='font-size:28rpx;float:right;margin-top:10rpx'>
+    <text wx:if="{{!canIUse&&showShouquan}}" bindtap='hidthis' style='color:#999999;margin-left:60rpx;height:60rpx;line-height:60rpx;font-size:30rpx;border:none;position:absolute;top:300rpx;left:300rpx'>
+      拒绝
+    </text>
+    <button wx:if="{{!canIUse}}" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo" style='color:#31B531;margin-left:60rpx;height:60rpx;line-height:60rpx;font-size:30rpx;border:none;position:absolute;top:300rpx;left:400rpx'>
+      允许
+    </button>
+  </view>
+  <!-- userInfo:getApp().globalData.userInfo -->
+</view>
 <scroll-view scroll-y="true" style="height:{{scrollHeight}}px;" enable-back-to-top="true" bindscrolltolower="bindDownLoad">
   <view class="top-bgimage" bindlongtap="bindRefresh">
     <view class="container">
@@ -9,8 +27,9 @@
       </view>
       <view class="balanceArea">
         <view class="balanceDetailArea">
-        <image class="billIcon" src="../../images/billIndex.png"></image>
-        账户余额:{{balance}}</view>
+          <image class="billIcon" src="../../images/billIndex.png"></image>
+          账户余额:{{balance}}
+        </view>
       </view>
     </view>
   </view>
@@ -22,12 +41,12 @@
     <view>
       <button class="btn-new" hover-class="btn-new-hover" bindtap="bindNewTapTwo">推荐理财</button>
     </view>
-     <view class="list" wx:key="{{indexList}}" wx:for="{{indexList}}">
+    <view class="list" wx:key="{{indexList}}" wx:for="{{indexList}}">
       <view class="list-title" bindtap="bindItemTap" data-id="{{item.ID}}" data-title="{{item.Title}}">
         <text>{{item.BillType}} {{item.Money}} 元</text>
-        <text class="blank-char"> | </text>
+        <text class="blank-char">|</text>
         <text>{{item.BillCat}}</text>
-        <text class="blank-char"> | </text>
+        <text class="blank-char">|</text>
         <text>{{item.Title}}</text>
       </view>
       <view class="list-date">
@@ -45,5 +64,6 @@
         <image class="list-image" data-url="{{item.Image}}" src="{{item.Image}}" mode="widthFix" bindtap="bindShowImage"></image>
       </block>
     </view>
-  </view> 
+  </view>
+  <!-- <button open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="bindGetUserInfo">获取用户信息</button> -->
 </scroll-view>
